# AgentService

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.md  requirements.txt  swagger.txt
.github/workflows/: cmake-single-platform.yml
control_plane_mock/: README.md  mock_server.py
control_plane_mock/api/: openapi.yaml
docs/: VpnAgent.md  api.txt  checklist.md
src/: cli.cpp  cli.hpp  config.cpp  config.hpp  logger.hpp  logger_core.cpp  main.cpp  registration_service.cpp  registration_service.hpp  service.cpp  service.hpp
src/agent/: agent_service.cpp  agent_service.hpp
src/cli/: cli.cpp  cli.hpp
src/common/: error_codes.hpp  peer_types.cpp  peer_types.hpp
src/config/: config.cpp  config.hpp
src/libs/wireguard/: wireguard.c
src/logging/: logger.hpp  logger_core.cpp  logger_core.hpp
src/platform/common/: platform_utils.hpp  tunnel_manager.cpp  tunnel_manager.hpp  tunnel_manager_base.cpp  tunnel_manager_base.hpp
src/platform/linux/: platform_utils.cpp  system_info.cpp  system_info.hpp  tunnel_manager_impl.cpp  tunnel_manager_impl.hpp  wg_interface.cpp  wg_interface.hpp  wg_setup.cpp  wg_setup.hpp
src/platform/linux/wireguard/: wireguard.h
src/platform/macos/: platform_utils.cpp  system_info.cpp  tunnel_manager_impl.cpp  tunnel_manager_impl.hpp  wg_interface.cpp  wg_interface.hpp
src/plugins/: PluginConcept.md  plugin_common.cpp  plugin_common.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_registry.cpp  plugin_registry.hpp  plugin_supervisor.hpp
src/plugins/docs/: notes.md
src/plugins/docs/diagrams/: PluginManagerClassDiagram.pu  SequenceDiagram.pu
src/registration/: registration.cpp  registration.hpp  registration_peers.cpp  registration_peers.hpp  rest_client.cpp  rest_client.hpp
tests/integration/linux/: README.md  conftest.py  test_two_peers_init.py  utils.py
tests/integration/linux/fixtures/: cleanup_env.sh  common.sh  run_with_cleanup.sh  setup_env.sh
